# Chess

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json
ChessLogic/: CMakeLists.txt
ChessLogic/src/: chess_logic_API.h
ChessLogic/src/core/: board.cpp  board.h  color.h  game.cpp  game.h  piece_type.h  position.h
ChessLogic/src/pieces/: bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h  rook.cpp  rook.h
ChessLogic/src/utils/: fen.cpp  fen.h  piece_factory.cpp  piece_factory.h
ChessUI/: CMakeLists.txt
ChessUI/src/: board_renderer.cpp  board_renderer.h  game_window.cpp  game_window.h  main.cpp  piece_renderer.cpp  piece_renderer.h
